# mortendaehli.github.io

./: .eslintcache  .gitignore  .gitmodules  404.html  CNAME  README.md  config.yaml  index.html  index.xml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tsconfig.json
.github/workflows/: gh-pages.yml
content/page/: about.md  contact.md  reading-list.md
content/post/: 2021-03-11-create-a-ghost-blog-on-azure-web-apps-using-docker.md  2021-03-11-forecasting-covid-19-vaccnations-in-norway.md  2021-03-13-search-engine-optimization.md  2022-08-07-what-I-talk-about-when-talk-about-coding.md  2022-08-07-what-I-think-about-when-talk-about-coding.md  2022-10-31-clean-git-history.md  2023-04-09-creational-design-patterns.md  2023-04-10-python-generics.md  2023-04-10-structural-design-patterns.md  2023-04-11-behavioral-design-patterns.md  2023-11-28-attention-is-all-you-need.md  creating-a-new-theme.md  goisforlovers.md  hugoisforlovers.md  migrate-from-jekyll.md
content/project/: 2021-03-11-create-a-ghost-blog-on-azure-web-apps-using-docker.md  2021-12-11-SQL-injections.md  2021-12-11-advent-of-code.md  2021-12-11-create-personal-hugo-blog.md  2021-12-11-event-driven-backtesting.md  2021-12-11-getting-started-with-hugo-blog.md  2021-12-11-my-readling-list.md  readling-list.md
page/: index.html  index.xml
page/1/: index.html
page/about/: index.html
page/contact/: index.html
post/: index.html  index.xml
project/: index.html  index.xml
public/: index.html
src/: App.tsx  index.css  index.tsx
src/theme/: index.tsx  (+1 more)
tags/: index.html  index.xml
(+134 files in other folders)
