[tool.poetry]
name = "mortendaehli-github-io"
version = "0.1.0"
description = ""
authors = ["Morten Daehli Aslesen <mortendaehli@gmail.com>"]
readme = "README.md"
packages = [{include = "mortendaehli"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
